fix content toggle border radius on mobile

--- a/src/components/content-toggle/content-toggle.css
+++ b/src/components/content-toggle/content-toggle.css
@@ -1,8 +1,9 @@
 .icon {
   cursor: pointer;
   background-color: black;
-  border-radius: 50%;
+  border-radius: 22px;
   fill: var(--secondary-color);
+  padding: 0;
   height: 22px;
   width: 22px;
   display: flex;
